--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Mi primer server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "MarcoGiovanniGuerreroLopez",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "install": "^0.13.0"
   }
 }
